# rob-agent

./: .env.example  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: agent-1.md  aws-strands-custom-config.md  aws-strands-setup.md  basic-concepts.md  building-your-first-agent.md  building-your-second-agent.md  execution-context.md  implementing-a-web-search-tool.md  index.md  llm-communication-layer.md  mcp.md  prerequisites.md  react.md  tool-abstraction.md  tool-definitions.md  tools.md
react_agents/models/: __init__.py  agent_result.py  llm_request.py  openai.py
react_agents/tools/: __init__.py  base_tool.py  calculator.py
react_agents/types/: __init__.py  contents.py  events.py
src/: basic-concepts.py  concepts.py  loop-concepts.py  mcp_client_experiment.py  tavily_mcp_server.py  tools-concepts.py
src/agents/: agent-1.py  agent_1.py  agent_2.py  agent_2_tools.py  agent_3_loop.py
src/evaluation/: metrics.py  reporting.py  runner.py
src/tools/: calculator.py
src/utilities/: tool_definition.py
